--- a/Dream/Dream/Views/Curriculu/Edit.cshtml
+++ b/Dream/Dream/Views/Curriculu/Edit.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Dream.Models.Curriculum
 
-@*@{
-    Layout = null;
-}*@
+@{
+    Layout = "~/Views/Shared/_LayoutEmpleado.cshtml";
+}
 
 <!DOCTYPE html>
 
@@ -29,7 +29,7 @@
                     <br />
                 </div><br />
 
-                <div class="row" >
+                <div class="row">
                     <br /><br />
 
                     <div class="col-md-5 border-right" id="frm1">
@@ -134,10 +134,10 @@
                                     </div>
                                 </div>
                             </div>
-                            
+
                         </div>
                     </div>
-                    
+
                 </div>
 
             </div>
@@ -152,24 +152,26 @@
 </html>
 
 <style>
-    #D1{
-        width:1000px;
-        border-radius:20px;
-        position:center;
-        left:1000px;
-        opacity:0.9;
-    }
-    #frm1{
-        position:center;
-        left:250px;
+    #D1 {
+        width: 1000px;
+        border-radius: 20px;
+        position: center;
+        left: 1000px;
+        opacity: 0.9;
     }
 
-    #btn{
-        position:center;
-        left:580px;
-        top:5px;
+    #frm1 {
+        position: center;
+        left: 250px;
     }
-    .form-horizontal h3{
-        color:#ffffff
+
+    #btn {
+        position: center;
+        left: 580px;
+        top: 5px;
+    }
+
+    .form-horizontal h3 {
+        color: #ffffff
     }
 </style>
