--- a/Dream/Dream/Views/Shared/_Layout.cshtml
+++ b/Dream/Dream/Views/Shared/_Layout.cshtml
@@ -60,17 +60,18 @@
             </li>
             <li class="has-subnav">
                 <span class="nav-text">
+                    <img src="~/Content/img/aplicantes.png" width="30" />
+                    @Html.ActionLink("F. Empleados", "Index2", "Curriculu")
+
+                </span>
+                <br />
+            </li>
+            <li class="has-subnav">
+                <span class="nav-text">
                     <img src="~/Content/img/user.png" width="30" />
                     @Html.ActionLink("Perfil", "Details", "DatosEmpresas")
                 </span>
             </li>
-            <br />
-            <li class="has-subnav">
-            <span class="nav-text">
-                <img src="~/Content/img/user.png" width="30" />
-                @Html.ActionLink("F. Empleados", "Index2", "Curriculu")
-            </span>
-        </li>
 
         </ul>
         <ul class="logout">
