--- a/Dream/Dream/Views/Curriculu/Details.cshtml
+++ b/Dream/Dream/Views/Curriculu/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Dream.Models.Curriculum
+﻿@model IEnumerable<Dream.Models.Curriculum>
 
 @{
     Layout = "~/Views/Shared/_LayoutEmpleado.cshtml";
@@ -13,136 +13,140 @@
     @Styles.Render("~/Content/Curri.css")
 </head>
 <body>
-    <div>
-        <h4 id="c">Detalles de Curriculum</h4>
-        <hr />
-        <div class="col-md-4 mb-3">
-            <div class="card">
-                <div class="card-body">
-                    <div class="d-flex flex-column align-items-center text-center">
-                        <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
-                        <div class="mt-3">
-                            <h4>  @Html.DisplayFor(modelItem => Model.nombre)</h4>
-                            <p class="text-secondary mb-1">  @Html.DisplayFor(modelItem => Model.nivelAcademico)</p>
-                            <p class="text-muted font-size-sm"> @Html.DisplayFor(modelItem => Model.direccion)</p>
+    @foreach (var item in Model)
+    {
 
+        <div>
+            <h4 id="c">Detalles de Curriculum</h4>
+            <hr />
+            <div class="col-md-4 mb-3">
+                <div class="card">
+                    <div class="card-body">
+                        <div class="d-flex flex-column align-items-center text-center">
+                            <img src="https://bootdey.com/img/Content/avatar/avatar7.png" alt="Admin" class="rounded-circle" width="150">
+                            <div class="mt-3">
+                                <h4>  @Html.DisplayFor(modelItem => item.nombre)</h4>
+                                <p class="text-secondary mb-1">  @Html.DisplayFor(modelItem => item.nivelAcademico)</p>
+                                <p class="text-muted font-size-sm"> @Html.DisplayFor(modelItem => item.direccion)</p>
+
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="card mt-3">
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                        <p>Decripcion personal</p>
-                        <span class="text-secondary"> @Html.DisplayFor(modelItem => Model.descripcion)</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                        <p>Correo:</p>
-                        <span class="text-secondary">  @Html.DisplayFor(modelItem => Model.Usuario.correo)</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                        <p>Segundo Idioma:</p>
-                        <span class="text-secondary">@Html.DisplayFor(modelItem => Model.segundoIdioma)</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                        <p>Correo Secundario:</p>
-                        <span class="text-secondary"> @Html.DisplayFor(modelItem => Model.correoOpc)</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                        <p>Licencia</p>
-                        <span class="text-secondary">   @Html.DisplayFor(modelItem => Model.licencia)</span>
-                    </li>
-                    <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
-                        <p>Telefono</p>
-                        <span class="text-secondary">@Html.DisplayFor(modelItem => Model.telefono)</span>
-                    </li>
+                <div class="card mt-3">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                            <p>Decripcion personal</p>
+                            <span class="text-secondary"> @Html.DisplayFor(modelItem => item.descripcion)</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                            <p>Correo:</p>
+                            <span class="text-secondary">  @Html.DisplayFor(modelItem => item.Usuario.correo)</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                            <p>Segundo Idioma:</p>
+                            <span class="text-secondary">@Html.DisplayFor(modelItem => item.segundoIdioma)</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                            <p>Correo Secundario:</p>
+                            <span class="text-secondary"> @Html.DisplayFor(modelItem => item.correoOpc)</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                            <p>Licencia</p>
+                            <span class="text-secondary">   @Html.DisplayFor(modelItem => item.licencia)</span>
+                        </li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
+                            <p>Telefono</p>
+                            <span class="text-secondary">@Html.DisplayFor(modelItem => item.telefono)</span>
+                        </li>
 
-                </ul>
-            </div>
-        </div><div class="col-md-8">
-            <div class="card mb-3">
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <h6 class="mb-0">Nombre</h6>
+                    </ul>
+                </div>
+            </div><div class="col-md-8">
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Nombre</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                @Html.DisplayFor(modelItem => item.nombre)
+                            </div>
                         </div>
-                        <div class="col-sm-9 text-secondary">
-                            @Html.DisplayFor(modelItem => Model.nombre)
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Apellidos</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                @Html.DisplayFor(modelItem => item.apellido)
+                            </div>
                         </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Edad</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                @Html.DisplayFor(modelItem => item.edad)
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Genero</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                @Html.DisplayFor(modelItem => item.genero)
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Numero de Dui</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                @Html.DisplayFor(modelItem => item.dui)
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Historial Academico</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                @Html.DisplayFor(modelItem => item.historialAcademico)
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Experiencia Laboral</h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                @Html.DisplayFor(modelItem => item.experienciaLab)
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <h6 class="mb-0">Feferencias </h6>
+                            </div>
+                            <div class="col-sm-9 text-secondary">
+                                @Html.DisplayFor(modelItem => item.referenciaPers)
+                            </div>
+                        </div><br /><br /><br /><br />
+                        <hr>
                     </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <h6 class="mb-0">Apellidos</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary">
-                            @Html.DisplayFor(modelItem => Model.apellido)
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <h6 class="mb-0">Edad</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary">
-                            @Html.DisplayFor(modelItem => Model.edad)
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <h6 class="mb-0">Genero</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary">
-                            @Html.DisplayFor(modelItem => Model.genero)
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <h6 class="mb-0">Numero de Dui</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary">
-                            @Html.DisplayFor(modelItem => Model.dui)
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <h6 class="mb-0">Historial Academico</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary">
-                            @Html.DisplayFor(modelItem => Model.historialAcademico)
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <h6 class="mb-0">Experiencia Laboral</h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary">
-                            @Html.DisplayFor(modelItem => Model.experienciaLab)
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-sm-3">
-                            <h6 class="mb-0">Feferencias </h6>
-                        </div>
-                        <div class="col-sm-9 text-secondary">
-                            @Html.DisplayFor(modelItem => Model.referenciaPers)
-                        </div>
-                    </div><br /><br /><br /><br />
-                    <hr>
                 </div>
             </div>
         </div>
-    </div>
-    <p>
-        @Html.ActionLink("Editar", "Edit", new { id = Model.idCurriculum }) |
-        @Html.ActionLink("Volver", "Index")
-    </p>
+        <p>
+            @Html.ActionLink("Atras", "Index2", null, new { @class = "btn btn-blanco" })
+        </p>
+    }
 </body>
+
 </html>
 <style>
     #c {
